resources/assets/sass/dashboard.scss
/* ... */
.dashboard-footer {
    margin-top: $grid-gutter-width;
    width: 100%;
    padding: 8px ($grid-gutter-width / 2);
    background-color: $c-dashboard-dark;
    text-align: right;

    a {
        color: $c-text-light-inactive;
        transition: color 150ms;

        &:hover, &:focus {
            text-decoration: none;
        }

        &.active {
            color: $c-text-light;
        }
    }
}

.card {
    margin-top: 20px;
    margin-bottom: 20px;

    > .card-header {
        @include font-sans-bold;
        position: relative;
        padding: 9px 15px;
        border-top: 1px solid darken($c-dashboard-dark, 5%);
        border-right: 1px solid darken($c-dashboard-dark, 5%);
        border-left: 1px solid darken($c-dashboard-dark, 5%);
        background-color: $c-dashboard-dark;
        color: $c-dashboard-light;
        font-size: 14px;

        .dashboard-heading {
            position: absolute;
            top: 50%;
            right: 8px;
            transform: translateY(-50%);

            .btn {
                min-width: 70px;
                height: 26px;
                padding-top: 1px;
                padding-bottom: 2px;
            }

            a {
                color: $c-text;
                text-decoration: none;
            }
        }
    }

    .card-body {
        padding: 15px;
        background-color: lighten($c-dashboard-light, 1%);

        &.dashboard {
            @include media-breakpoint-down(sm) {
                padding: 0px;
            }
        }

        .search {
            margin-bottom: 10px;
            width: 100%;

            @include media-breakpoint-down(sm) {
                margin: 3px 3px 0px 3px;
                width: calc(100% - 6px);
            }
        }

        .help-text {
            margin-top: 10px;
            margin-bottom: 10px;
            padding: 5px 10px;
            border: 1px solid darken($c-dashboard-dark, 5%);
            border-radius: 5px;
            background-color: $c-dashboard-dark;
            color: $c-text-light;
        }

        .form-group {
            margin-bottom: 15px;

            label {
                @include font-sans-semibold;
                font-size: 14px;

                @include media-breakpoint-up(md) {
                    text-align: right;
                }
            }

            .form-control {
                font-size: 14px;
                transition: border-color 150ms, box-shadow 150ms;

                &:focus {
                    border-color: $c-dashboard-dark;
                    box-shadow: inset 0 1px 1px fade-out(#000, 0.925), 0 0 8px fade-out($c-dashboard-dark, 0.4);
                }
            }

            &.has-error .form-control {
                border-color: $c-dashboard-error;
            }

            .checkbox {
                position: relative;
                display: inline-block;
                min-height: 0px;
                padding-top: 0px;
                padding-left: 22px;
                user-select: none;

                span, input {
                    position: absolute;
                    top: 50%;
                    left: 0px;
                    transform: translateY(-50%);
                    display: block;
                    width: 16px;
                    height: 16px;
                }

                span {
                    border: 1px solid lighten($c-text, 50%);
                    border-radius: 4px;
                    background-color: $c-input-bg;
                    pointer-events: none;

                    &:after {
                        content: "";
                        position: absolute;
                        top: 0px;
                        left: 0px;
                        transform: scale(0);
                        display: block;
                        width: 100%;
                        height: 100%;
                        background-image: url("/img/dashboard/icons/checkmark.svg");
                        background-position: center center;
                        background-size: 65% auto;
                        background-repeat: no-repeat;
                        opacity: 0;
                        transition: transform 150ms, opacity 150ms;
                    }
                }

                input {
                    margin: 0px;
                    padding: 0px;
                    opacity: 0;
                    cursor: pointer;

                    &:checked + span:after {
                        transform: scale(1);
                        opacity: 1;
                    }
                }
            }

            .text-muted {
                font-size: 10px;
                text-transform: uppercase;
            }
        }

        .dashboard-credits {
            padding: $grid-gutter-width;

            h2 {
                @include font-sans-semibold;
                margin-bottom: 15px;
                font-size: 18px;
                text-transform: uppercase;

                &:not(:first-child) {
                    margin-top: 25px;
                }
            }

            ul {
                margin-bottom: 0px;
                padding-left: 20px;

                li a {
                    color: $c-text;
                }
            }
        }
    }
}
/* ... */

